--- a/StyleFiles/Css/indexStyle.css
+++ b/StyleFiles/Css/indexStyle.css
@@ -41,6 +41,12 @@ body {
     margin-bottom: 35px;
 }
 
+.layer {
+   background-color: rgba(248, 247, 216, 0.5);
+   border-radius: 20px;
+   box-shadow: 1px 1px 20px black;
+}
+
 .who-title {
     margin-top: 100px;
     color: #FAFAFA;
